Bug 164797 - FILESAVE PDF/UA "Link annotation is not nested inside a Link structure element" error when exporting cross-reference to a style
Summary: FILESAVE PDF/UA "Link annotation is not nested inside a Link structure elemen...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.8.0 inReleaseNotes:25.8
Keywords:
: 165294 (view as bug list)
Depends on:
Blocks: PDF-Accessibility Accessibility-Check
  Show dependency treegraph
 
Reported: 2025-01-22 11:28 UTC by Gabor Kelemen (Collabora)
Modified: 2025-04-18 11:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (49.25 KB, application/vnd.oasis.opendocument.text)
2025-01-22 11:28 UTC, Gabor Kelemen (Collabora)
Details
The example file exported by Writer as PDF/UA (37.90 KB, application/pdf)
2025-01-22 11:28 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue in PAC 2024 (60.51 KB, image/png)
2025-01-22 11:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-01-22 11:28:25 UTC
Created attachment 198673 [details]
Example file from Writer

Attached example file contains 2 cross references in the header to the Title and Heading 1 styles.

When exported to PDF with PDF/UA enabled, the PAC tool 2024 complains that the links in the header are not nested inside a Link structure element.

1. Open attached file with an en-US locale Writer
2. Export as PDF with PDF/UA enabled
3. Open in PAC tool 2024

-> "Link annotation is not nested inside a Link structure element" errors

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b6223845f6dc50f1343a9302b5826a6e801dea57
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2025-01-22 11:28:43 UTC
Created attachment 198674 [details]
The example file exported by Writer as PDF/UA
Comment 2 Gabor Kelemen (Collabora) 2025-01-22 11:28:59 UTC
Created attachment 198675 [details]
Screenshot of the issue in PAC 2024
Comment 3 Commit Notification 2025-03-17 07:37:23 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cc3a9f4c8c2359b525261ec917bb68fc5e8b6c4

tdf#164797 - sw a11y: add new check of links and references in Header/Footer

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2025-03-20 12:09:04 UTC
*** Bug 165294 has been marked as a duplicate of this bug. ***