tdf#164797 - sw a11y: add new check of links and references in Header/Footer

to warn users about PAC "Link annotation is not nested inside a Link
structure element." errors, so they can avoid them.

Change-Id: I8d1fc7042e2ee34a5777c3a448d2379038ea24e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182868
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>